<resources>
    <string name="app_name">SaaS</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_pass">Please enter your password</string>
    <string name="enter_name">please enter user name</string>
    <string name="please_input">Please Input!!!</string>
    <string name="check_net">Please Check NetWork!!</string>
    <string name="please_email">please enter your vaild email</string>
    <string name="please_re_pass">Please enter the confirmation password</string>
    <string name="loading">loading...</string>
    <string name="free_zone">FreeZone</string>
    <string name="vip_zone">VipZone</string>
    <string name="personal">Personal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">NO DATA</string>
    <string name="content">Content:</string>
    <string name="favoritelist">Favorite List</string>
    <string name="exit">Sign Out</string>
    <string name="please_login">Please Login!!!</string>


    <string-array name="url">
        <item>http://img1.pconline.com.cn/piclib/200811/09/batch/1/16241/1226244487956x9z4xg3wo7.jpg</item>
        <item>http://img1.pconline.com.cn/piclib/200811/09/batch/1/16241/1226244487956x9z4xg3wo7.jpg</item>
        <item>http://img1.pconline.com.cn/piclib/200811/09/batch/1/16241/1226244487956x9z4xg3wo7.jpg</item>
        <item>http://img1.pconline.com.cn/piclib/200811/09/batch/1/16241/1226244487956x9z4xg3wo7.jpg</item>
    </string-array>
    <string-array name="title">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
