<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg_color"
    android:orientation="vertical"
    tools:context="com.extra.saas.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/all_bg_color"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/color_line"/>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_line"/>

    <LinearLayout
        android:textColor="@drawable/tab_menu_deal_text"
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <TextView
            android:textColor="@drawable/tab_menu_deal_text"
            android:id="@+id/txt_Free_Zone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_font_3"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/free_zone" />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/c"/>
        <TextView
            android:textColor="@drawable/tab_menu_deal_text"
            android:id="@+id/txt_Vip_Zone"
            android:layout_width="0dp"
            android:textSize="@dimen/text_font_3"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/vip_zone" />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/c"/>
        <TextView
            android:textColor="@drawable/tab_menu_deal_text"
            android:id="@+id/txt_user"
            android:layout_width="0dp"
            android:textSize="@dimen/text_font_3"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/personal" />
    </LinearLayout>


</LinearLayout>
